# ww1-trench-defense

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
assets/shaders/: sprite.frag  sprite.vert  tile.frag  ui.frag  ui.vert
src/: main.c  miniaudio_impl.c
src/audio/: audio.c  audio.h  sound_defs.c  synth.c  synth.h
src/core/: engine.c  engine.h  input.c  input.h  log.c  log.h  memory.c  memory.h  td_time.c  td_time.h  window.c  window.h
src/game/: economy.c  economy.h  enemy.c  enemy.h  game.c  game.h  level.c  level.h  map.c  map.h  particles.c  particles.h  path.c  path.h  projectile.c  projectile.h  tower.c  tower.h  wave.c  wave.h
src/math/: iso.h  mat4.c  mat4.h  math_types.h  math_utils.h  vec.h
src/render/: atlas_gen.c  atlas_gen.h  camera.c  camera.h  debug_draw.c  debug_draw.h  renderer.c  renderer.h  shader.c  shader.h  sprite_batch.c  sprite_batch.h  texture.c  texture.h
src/resource/: resource_manager.c  resource_manager.h
src/states/: app_context.h  state.c  state.h  state_briefing.c  state_briefing.h  state_difficulty.c  state_difficulty.h  state_gameover.c  state_gameover.h  state_levelselect.c  state_levelselect.h  state_menu.c  state_menu.h  state_pause.c  state_pause.h  state_play.c  state_play.h  state_victory.c  state_victory.h
src/ui/: ui.c  ui.h  ui_widgets.c  ui_widgets.h
